homer/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
  namespace: homer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homer
  template:
    metadata:
      labels:
        app: homer
    spec:
      containers:
      - name: homer
        image: b4bz/homer
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: assets-volume
          mountPath: /www/assets
      volumes:
      - name: assets-volume
        persistentVolumeClaim:
          claimName: homer-assets-pvc
