homer/service.yml
apiVersion: v1
kind: Service
metadata:
  name: homer
  namespace: homer
spec:
  selector:
    app: homer
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
